--- a/was/src/main/resources/messages/messages.properties
+++ b/was/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome! Jenkins WAS Test 2025-12-22 11:59:28
+welcome=Welcome@@! Jenkins WAS Test
 required=is required
 notFound=has not been found
 duplicate=is already in use
