--- a/was/src/main/resources/messages/messages.properties
+++ b/was/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome to jisoo cicd! Jenkins WAS Test
+welcome=Welcome to jisoo cicd! 2025-12-24
 required=is required
 notFound=has not been found
 duplicate=is already in use
