--- a/was/src/main/resources/messages/messages.properties
+++ b/was/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome to jisoo cicd! 2025-12-24-2
+welcome=Welcome to cicd test! 2026-01-01
 required=is required
 notFound=has not been found
 duplicate=is already in use
