update welcome meassages

--- a/was/src/main/resources/messages/messages.properties
+++ b/was/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome to cicd last test 2026-01-02
+welcome=Welcome to petclinic 2026-01-02
 required=is required
 notFound=has not been found
 duplicate=is already in use
